After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684548 - Fix possible crasher on exit
Fix possible crasher on exit
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: housekeeping
3.5.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2012-09-21 11:51 UTC by Bastien Nocera
Modified: 2012-09-25 13:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-housekeeping-Don-t-crash-on-exit.patch (935 bytes, patch)
2012-09-21 11:52 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2012-09-21 11:51:22 UTC
.
Comment 1 Bastien Nocera 2012-09-21 11:52:17 UTC
Created attachment 224920 [details] [review]
0001-housekeeping-Don-t-crash-on-exit.patch
Comment 2 Matthias Clasen 2012-09-21 11:52:56 UTC
Review of attachment 224920 [details] [review]:

ugh. looks good to me
Comment 3 André Klapper 2012-09-22 09:04:41 UTC
In case you plan to ask for a hardcode freeze break, here's one out of two r-t approvals.
Comment 4 Bastien Nocera 2012-09-25 13:14:20 UTC
commit dcfe290500e0d68a71f09e576e28c09f7572cef6
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Sep 21 13:46:34 2012 +0200

    housekeeping: Don't crash on exit
    
    If a notification popup was shown, and then dismissed, notification
    wouldn't have been reset, and we would crash on exit trying to
    dismiss it.
    
    https://bugzilla.redhat.com/show_bug.cgi?id=859383
    https://bugzilla.gnome.org/show_bug.cgi?id=684548