housekeeping: Don't crash on exit

If a notification popup was shown, and then dismissed, notification
wouldn't have been reset, and we would crash on exit trying to
dismiss it.

https://bugzilla.redhat.com/show_bug.cgi?id=859383
https://bugzilla.gnome.org/show_bug.cgi?id=684548